<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="E_LoadClose" Id="{3c4f8a1c-eacc-4af3-8256-819ed6405dce}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_LoadClose :
(
	None:=0,// 不关闭
	Line0,
	Line1
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>