<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="ST_StationLine0Load" Id="{23d93202-913f-4ed8-9264-8a0fd86d6142}">
    <Declaration><![CDATA[TYPE ST_StationLine0Load :
STRUCT
	fbPart:			REFERENCE TO FB_Cylinder;// 分料气缸
	fbPrevent:		REFERENCE TO FB_Cylinder;// 阻挡气缸
	bPartCheck:		BOOL;// 分料光电
	bPreventCheck:	BOOL;// 阻挡光电
	stHandshake:	ST_StationLine0LoadHandshake;	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>