<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <POU Name="FB_StationLine0Load" Id="{afdbfbe4-8f60-4dd9-9463-c1af22b84dfb}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_StationLine0Load
VAR_INPUT
	Enable:				BOOL;
	System:				REFERENCE TO ST_System;
	Station:			REFERENCE TO ST_SystemStation;
	Error:				REFERENCE TO ST_Error;
	Setting:			REFERENCE TO ST_Setting;
	Recipe:				REFERENCE TO ST_Recipe;	
	Parameter:			REFERENCE TO ST_StationLine0Load;
END_VAR
VAR_OUTPUT
END_VAR
VAR
	_i:					INT;
	_arrTon:		    ARRAY[0..20] OF TON;
	_arrFbErrorTag:		ARRAY[0..20] OF FB_ErrorTag;
	_arrState:			ARRAY[0..20] OF BOOL;
	
	_stHandshake:		ST_StationLine0LoadHandshake;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[A_Home();
A_Auto();]]></ST>
    </Implementation>
    <Action Name="A_Auto" Id="{a965c940-019a-4e33-bcce-e230516e8af6}">
      <Implementation>
        <ST><![CDATA[CASE Station.iStepNow OF
	1000:
		Station.arrInfo[E_Language.Chinese]:="初始化完成 等待启动";
		IF Enable THEN
			Station.iStepNext:=1100;
		END_IF
	1100:
		Station.arrInfo[E_Language.Chinese]:="判断阻挡位是否有料";
		IF Parameter.bPreventCheck THEN
			Station.iStepNext:=1601;
		ELSE
			Station.iStepNext:=1201;
		END_IF
	1201:
		Station.arrInfo[E_Language.Chinese]:="判断分料位是否有料";
		IF Parameter.bPartCheck AND Recipe.eLoadClose<>E_LoadClose.Line0 THEN
			Station.iStepNext:=1301;
		END_IF
	1301:
		Station.arrInfo[E_Language.Chinese]:="分料气缸缩回";
		IF  Parameter.fbPart.M_HomeRequest() THEN
			Station.iStepNext:=1401;
		END_IF
	1401:
		Station.arrInfo[E_Language.Chinese]:="等待产品至阻挡位";
		IF Parameter.bPreventCheck THEN
			Station.iStepNext:=1501;
		END_IF
	1501:
		Station.arrInfo[E_Language.Chinese]:="分料气缸伸出";
		IF  Parameter.fbPart.M_WorkRequest() THEN
			Station.iStepNext:=1601;
		END_IF
	1601:
		Station.arrInfo[E_Language.Chinese]:="等待缓存工站请求放料";
		IF Parameter.stHandshake.bRequestLine0Load THEN
			Parameter.stHandshake.bResponseLine0Buffer:=TRUE;
			Station.iStepNext:=1701;
		END_IF
	1701:
		Station.arrInfo[E_Language.Chinese]:="阻挡气缸缩回";
		IF Parameter.fbPrevent.M_HomeRequest() THEN
			Station.iStepNext:=1751;
		END_IF
	1751:
		Station.arrInfo[E_Language.Chinese]:="等待产品流出";
		IF NOT Parameter.bPreventCheck THEN
			Station.iStepNext:=1801;
		END_IF
	1801:
		Station.arrInfo[E_Language.Chinese]:="等待放料完成";
		IF NOT Parameter.stHandshake.bRequestLine0Load THEN
			Parameter.stHandshake.bResponseLine0Buffer:=FALSE;
			Station.iStepNext:=1901;
		END_IF
	1901:
		Station.arrInfo[E_Language.Chinese]:="阻挡气缸伸出";
		IF Parameter.fbPrevent.M_WorkRequest() THEN
			Station.iStepNext:=1100;
		END_IF
END_CASE]]></ST>
      </Implementation>
    </Action>
    <Action Name="A_Home" Id="{254cc291-bf46-4fa0-b27c-71131d2ebd65}">
      <Implementation>
        <ST><![CDATA[CASE Station.iStepNow OF
	0:
		Station.arrInfo[E_Language.Chinese]:="等待初始化";
		Parameter.stHandshake:=_stHandshake;
		Station.iStepNext:=SEL(Enable,1000,200);
	200:
		Station.arrInfo[E_Language.Chinese]:="分料气缸 阻挡气缸伸出";
		_arrState[0]:=Parameter.fbPart.M_WorkRequest();
		_arrState[1]:=Parameter.fbPrevent.M_WorkRequest();
		IF _arrState[0] AND _arrState[1] THEN
			Station.iStepNext:=1000;
		END_IF
END_CASE]]></ST>
      </Implementation>
    </Action>
    <LineIds Name="FB_StationLine0Load">
      <LineId Id="32" Count="0" />
      <LineId Id="9" Count="0" />
    </LineIds>
    <LineIds Name="FB_StationLine0Load.A_Auto">
      <LineId Id="1" Count="0" />
      <LineId Id="4" Count="1" />
      <LineId Id="63" Count="2" />
      <LineId Id="7" Count="1" />
      <LineId Id="56" Count="0" />
      <LineId Id="55" Count="0" />
      <LineId Id="11" Count="0" />
      <LineId Id="57" Count="0" />
      <LineId Id="13" Count="31" />
      <LineId Id="58" Count="0" />
      <LineId Id="62" Count="0" />
      <LineId Id="59" Count="2" />
      <LineId Id="45" Count="9" />
      <LineId Id="2" Count="1" />
    </LineIds>
    <LineIds Name="FB_StationLine0Load.A_Home">
      <LineId Id="1" Count="1" />
      <LineId Id="4" Count="0" />
      <LineId Id="129" Count="0" />
      <LineId Id="5" Count="0" />
      <LineId Id="123" Count="5" />
      <LineId Id="12" Count="0" />
      <LineId Id="3" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>